disable custom font settings

--- a/slides/assets/css/slides.css
+++ b/slides/assets/css/slides.css
@@ -1,3 +1,4 @@
+/*
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -9,6 +10,7 @@
 .reveal p {
   font-family: Montserrat, Impact, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "Microsoft JhengHei", "標楷體", DFKai-SB, sans-serif;
 }
+*/ 
 
 img {
   width: 60%;
